[CHANGE] - Adding tests

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb://root:root@localhost:27017/coally?authSource=admin
 JWT_SECRET=sdf3242f24gf4g34g43g34g34g34
+BACKEND_URL=http://localhost:8081/api
