--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "babel src --out-dir dist",
     "start": "node dist/index.js",
     "lint": "eslint",
+    "test": "jest --verbose --forceExit --maxWorkers=1 --silent --no-cache",
     "create-user": "node src/seeders/admin-seeder.js"
   },
   "author": "",
@@ -32,10 +33,18 @@
   "devDependencies": {
     "@babel/cli": "^7.26.4",
     "@babel/core": "^7.26.0",
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.14",
+    "@types/mocha": "^10.0.10",
+    "@types/node": "^22.10.2",
+    "@types/supertest": "^6.0.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "nodemon": "^2.0.12",
-    "prettier": "^2.3.2"
+    "prettier": "^2.3.2",
+    "supertest": "^7.0.0"
   }
 }
